# nn_playground

./: README.md
pvae/: CMakeLists.txt
pvae/cmake/: FindLibTorch.cmake
pvae/src/: PVAE_model.hpp  common_utils.hpp  main.cpp  nn_utils.hpp  protein_seq.hpp
pvae2/: aa_model.py  aa_utils.py  main.py
